--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "cloudinary": "^1.37.3",
+    "encoding": "^0.1.13",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.1",
-    "next": "13.4.10",
+    "next": "^13.4.10",
     "next-auth": "^4.22.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
